--- a/stellar/login/index.html
+++ b/stellar/login/index.html
@@ -20,7 +20,7 @@
     <form id="login-form">
       <div class="input-group">
         <i class="fas fa-user"></i>
-        <input type="text" id="username" placeholder="Username" maxlength="7" required>
+        <input type="text" id="username" placeholder="Username"  required>
       </div>
 
       <div class="input-group">
