--- a/stellar/index.html
+++ b/stellar/index.html
@@ -149,9 +149,13 @@
         .nav-links li:nth-child(6) {
             animation-delay: 1.2s;
         }
-        
+
         .nav-links li:nth-child(7) {
             animation-delay: 1.4s;
+        }
+
+        .nav-links li:nth-child(8) {
+            animation-delay: 1.6s;
         }
 
         @keyframes fadeInUp {
@@ -193,6 +197,56 @@
             color: var(--accent-end);
         }
 
+        /* Dropdown styling */
+        .dropdown {
+            position: relative;
+            z-index: 100;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: var(--secondary-bg);
+            min-width: 12.5rem;
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+            border-radius: 0.5rem;
+            padding: 0.5rem;
+            animation: fadeInScale 0.3s ease-in-out;
+            top: calc(100% + 0.5rem);
+            left: 0;
+            border: 1px solid #e0e0e0;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        @keyframes fadeInScale {
+            from {
+                opacity: 0;
+                transform: scale(0.95);
+            }
+
+            to {
+                opacity: 1;
+                transform: scale(1);
+            }
+        }
+
+        .dropdown-content a {
+            color: var(--text-color);
+            padding: 0.75rem 1rem;
+            text-decoration: none;
+            display: block;
+            white-space: nowrap;
+            border-radius: 0.3rem;
+        }
+
+        .dropdown-content a:hover {
+            background-color: var(--card-bg);
+        }
+
         /* Mobile Menu */
         .menu-toggle {
             display: none;
@@ -222,6 +276,25 @@
 
             .menu-toggle {
                 display: block;
+            }
+
+            /* Dropdown behavior on mobile */
+            .dropdown-content {
+                position: static;
+                margin-top: 0.5rem;
+                box-shadow: none;
+                background-color: transparent;
+                padding: 0;
+                border: none;
+            }
+
+            .dropdown:hover .dropdown-content {
+                display: block;
+            }
+
+            .dropdown-content a {
+                padding: 0.5rem 1rem;
+                font-size: 0.9rem;
             }
         }
 
@@ -435,7 +508,7 @@
 
         /* Events Section */
         .events {
-            padding: 4rem 2rem;
+            padding: 4rem 1rem;
             background: var(--primary-bg);
             text-align: center;
             color: var(--text-color);
@@ -462,7 +535,7 @@
             border-radius: 1rem;
             box-shadow: 0 0 1.25rem var(--shadow-light);
             transition: all var(--transition-speed) ease;
-            width: 17.5rem;
+            width: 16.5rem;
             text-align: left;
             border: 1px solid rgba(0, 135, 197, 0.1);
         }
@@ -531,7 +604,7 @@
 
         /* Today's Classes Section */
         .todays-classes {
-            padding: 4rem 2rem;
+            padding: 4rem 1rem;
             background: var(--primary-bg);
             text-align: center;
             color: var(--text-color);
@@ -660,55 +733,6 @@
             }
         }
 
-        .footer2 {
-            display: block;
-            text-align: center;
-            background: var(--secondary-bg);
-            padding: 2rem 1rem;
-            border-top: 1px solid rgba(0, 0, 0, 0.05);
-            margin-top: 2.5rem;
-            transition: background var(--transition-speed);
-        }
-
-        .content2 {
-            display: inline-block;
-            text-align: left;
-        }
-
-        .justify {
-            display: flex;
-            justify-content: left;
-            align-items: center;
-        }
-
-        .content2 h3 {
-            margin-bottom: 1rem;
-            color: var(--accent-start);
-        }
-
-        .content2 ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            display: block;
-        }
-
-        .content2 ul li {
-            display: block;
-            margin-bottom: 1rem;
-        }
-
-        .content2 ul li a {
-            text-decoration: none;
-            color: var(--subtle-text);
-            font-size: 1rem;
-            transition: color var(--transition-speed) ease;
-        }
-
-        .content2 ul li a:hover {
-            color: var(--accent-end);
-        }
-
         /* Fade-in effect for timetable cards */
         .fade-in {
             opacity: 0;
@@ -763,12 +787,28 @@
 
         <ul class="nav-links" id="nav-links">
             <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
-            <li><a href="attendence/index.html" id="attendance-link"><i class="fas fa-user-check"></i> Attendance</a></li>
+            <li><a href="attendence/index.html" id="attendance-link"><i class="fas fa-user-check"></i> Attendance</a>
+            </li>
             <li><a href="/ai/index.html"><i class="fas fa-robot"></i> AI HELPER</a></li>
             <li><a href="terms/index.html"><i class="fas fa-file-contract"></i> Terms</a></li>
             <li id="marks-link"><a href="#"><i class="fas fa-clipboard"></i> Marks</a></li>
             <!-- New link for teachers -->
-            <li id="teacher-performance-link" style="display: none;"><a href="tsprofile/index.html"><i class="fas fa-chart-line"></i> Student Performance</a></li>
+            <li id="teacher-performance-link" style="display: none;"><a href="tsprofile/index.html"><i
+                        class="fas fa-chart-line"></i> Student Performance</a></li>
+            <li class="dropdown">
+                <a href="#"><i class="fas fa-link"></i> Important Links <i class="fas fa-caret-down"></i></a>
+                <div class="dropdown-content">
+                    <a href="https://kic.nitsikkim.ac.in/downloads/Gate%20Pass%202%20(1).pdf"><i
+                            class="fas fa-user-check"></i> Gate Pass</a>
+                    <a href="https://nitsikkim.samarth.edu.in/index.php/site/login"><i class="fas fa-user-check"></i>
+                        Samarth Portal</a>
+                    <a
+                        href="https://nitsikkim.ac.in/documents/downloads/Proforma_Form%20for%20Issuing%20Certificate_English.pdf"><i
+                            class="fas fa-user-check"></i> Academic Document</a>
+                    <a href="https://nitsikkim.ac.in/students/academicCalendar.php"><i class="fas fa-user-check"></i>
+                        Academic Calendar</a>
+                </div>
+            </li>
             <li id="auth-btn"><a href="login/index.html"><i class="fas fa-user"></i> Login</a></li>
         </ul>
     </nav>
@@ -782,14 +822,16 @@
             </h1>
             <p>
                 Stellar Mind is a community-driven club where innovation meets creativity.
-                We explore cutting-edge technology, design, and ideas to inspire the next generation of thinkers and creators.
+                We explore cutting-edge technology, design, and ideas to inspire the next generation of thinkers and
+                creators.
             </p>
             <a href="/terms/index.html" class="btn">About Us</a>
         </div>
 
         <div class="spline-card">
             <div class="spline-frame desktop-only">
-                <script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.48/build/spline-viewer.js"></script>
+                <script type="module"
+                    src="https://unpkg.com/@splinetool/viewer@1.10.48/build/spline-viewer.js"></script>
                 <spline-viewer url="https://prod.spline.design/T-sK3KIXQLUHJVmk/scene.splinecode"></spline-viewer>
             </div>
             <div class="blocker">
@@ -802,7 +844,7 @@
     </section>
 
     <!-- Today's Classes Section -->
-    <section class="todays-classes">
+    <section class="todays-classes" id="todays-classes-section">
         <h2>Today's Classes</h2>
         <div id="classes-list" class="classes-list">
             <p>Loading today's schedule...</p>
@@ -818,20 +860,6 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer footer2">
-        <div class="footer-content content2">
-            <h3><i class="fa-solid fa-lightbulb"></i> Important Links</h3>
-            <div class="justify">
-                <ul>
-                    <li><a href="https://kic.nitsikkim.ac.in/downloads/Gate%20Pass%202%20(1).pdf"><i class="fas fa-user-check"></i> Gate Pass</a></li>
-                    <li><a href="https://nitsikkim.samarth.edu.in/index.php/site/login"><i class="fas fa-user-check"></i> Samarth Portal</a></li>
-                    <li><a href="https://nitsikkim.ac.in/documents/downloads/Proforma_Form%20for%20Issuing%20Certificate_English.pdf"><i class="fas fa-user-check"></i> Academic Document</a></li>
-                    <li><a href="https://nitsikkim.ac.in/students/academicCalendar.php"><i class="fas fa-user-check"></i> Academic Calendar</a></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
-
     <footer class="footer">
         <div class="footer-content">
             <p>© 2025 Stellar Mind | NIT Sikkim</p>
@@ -884,7 +912,7 @@
         async function checkLogin() {
             try {
                 currentUser = JSON.parse(localStorage.getItem("user"));
-            } catch {}
+            } catch { }
 
             const authBtn = document.getElementById("auth-btn");
             const welcomeUser = document.getElementById("welcome-user");
@@ -900,7 +928,7 @@
                 navLinks.insertBefore(li, navLinks.children[4]);
                 marksLink = li;
             }
-            
+
             // Hide the teacher-specific link by default
             if (teacherPerformanceLink) {
                 teacherPerformanceLink.style.display = 'none';
@@ -952,6 +980,7 @@
             localStorage.removeItem("user");
             currentUser = null;
             checkLogin();
+            loadClasses(); // Re-run to update the classes section
         }
 
         // =============================
@@ -1005,8 +1034,26 @@
         // =============================
         function loadClasses() {
             const classList = document.getElementById("classes-list");
-            if (!classList) return;
+            const todaysClassesSection = document.getElementById("todays-classes-section");
+            if (!classList || !todaysClassesSection) return;
 
+            // State 1: No user logged in
+            if (!currentUser) {
+                todaysClassesSection.style.display = 'block';
+                classList.innerHTML = `
+                     <p style="text-align: center; font-size: 1.1rem; color: var(--subtle-text);">Please Login First to see your schedule.</p>
+                 `;
+                return;
+            }
+
+            // State 2: Teacher or Admin logged in - hide the section
+            if (currentUser.role === 'teacher' || currentUser.role === 'admin') {
+                todaysClassesSection.style.display = 'none';
+                return;
+            }
+
+            // State 3: Student logged in (using the existing logic)
+            todaysClassesSection.style.display = 'block';
             const today = new Date().toLocaleDateString("en-US", {
                 weekday: "short"
             }).toUpperCase();
@@ -1016,7 +1063,7 @@
                 return;
             }
 
-            if (currentUser && /^b2400\d{2}$/i.test(currentUser.username)) {
+            if (/^b2400\d{2}$/i.test(currentUser.username)) {
                 const todaySchedule = timetable[today] || [];
                 classList.innerHTML = "";
 
@@ -1028,10 +1075,10 @@
                 });
             } else {
                 classList.innerHTML = `
-                <div class="uploading-soon">
-                    <span>📡 Your schedule is uploading soon...</span>
-                </div>
-                `;
+                     <div class="uploading-soon">
+                         <span>📡 Your schedule is uploading soon...</span>
+                     </div>
+                 `;
             }
         }
 
@@ -1069,10 +1116,10 @@
                     const card = document.createElement("div");
                     card.className = "event-card";
                     card.innerHTML = `
-                    <h3><i class="fas fa-star"></i> ${event.name}</h3>
-                    <p><i class="fas fa-calendar-alt"></i> ${event.date}</p>
-                    <p><i class="fas fa-clock"></i> ${event.time}</p>
-                    `;
+                     <h3><i class="fas fa-star"></i> ${event.name}</h3>
+                     <p><i class="fas fa-calendar-alt"></i> ${event.date}</p>
+                     <p><i class="fas fa-clock"></i> ${event.time}</p>
+                     `;
                     eventsList.appendChild(card);
                 });
             } catch (err) {
