--- a/stellar/teacher/index.html
+++ b/stellar/teacher/index.html
@@ -48,7 +48,8 @@
             justify-content: space-between;
             align-items: center;
             background: var(--secondary-bg);
-            padding: 1rem 2rem;
+            padding: 0.75rem 2rem;
+            /* Reduced height */
             box-shadow: 0 4px 20px var(--shadow-light);
             position: sticky;
             top: 0;
@@ -64,31 +65,88 @@
             font-size: 1.2rem;
         }
 
+        /* Nav links */
         .nav-links {
             list-style: none;
+            display: flex;
+            gap: 1.5rem;
+            align-items: center;
         }
 
+        .nav-links li {
+            position: relative;
+            opacity: 0;
+            transform: translateY(-1rem);
+            animation: fadeInUp 0.8s forwards;
+        }
+
+        .nav-links li:nth-child(1) {
+            animation-delay: 0.2s;
+        }
+
+        .nav-links li:nth-child(2) {
+            animation-delay: 0.4s;
+        }
+
+        .nav-links li:nth-child(3) {
+            animation-delay: 0.6s;
+        }
+
+        .nav-links li:nth-child(4) {
+            animation-delay: 0.8s;
+        }
+
+        @keyframes fadeInUp {
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .nav-links a,
         .nav-links button {
-            color: var(--subtle-text);
-            background: none;
-            border: 1px solid #ddd;
-            border-radius: 2rem;
-            padding: 0.5rem 1rem;
-            cursor: pointer;
-            font-size: 0.9rem;
-            font-family: 'Poppins', sans-serif;
-            font-weight: 600;
-            transition: all 0.3s;
-        }
-
-        .nav-links button:hover {
-            background-color: var(--card-bg);
             color: var(--text-color);
-            border-color: #ccc;
+            text-decoration: none;
+            font-size: 1rem;
+            padding: 0.5rem 0.3rem;
+            display: flex;
+            align-items: center;
+            gap: 0.4rem;
+            position: relative;
+            transition: color var(--transition-speed);
+            background: none;
+            border: none;
+            cursor: pointer;
+            font-family: 'Poppins', sans-serif;
         }
 
-        .nav-links button i {
-            margin-right: 0.5rem;
+        .nav-links a::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            bottom: -0.3rem;
+            width: 0%;
+            height: 0.15rem;
+            background: linear-gradient(90deg, var(--accent-start), var(--accent-end));
+            transition: width var(--transition-speed);
+            border-radius: 0.1rem;
+        }
+
+        .nav-links a:hover::after {
+            width: 100%;
+        }
+
+        .nav-links a:hover,
+        .nav-links button:hover {
+            color: var(--accent-end);
+        }
+
+        /* Mobile Menu */
+        .menu-toggle {
+            display: none;
+            font-size: 1.5rem;
+            color: var(--text-color);
+            cursor: pointer;
         }
 
         .container {
@@ -97,7 +155,6 @@
             padding: 0 1rem;
         }
 
-        /* Teacher Header */
         .teacher-header {
             background: var(--secondary-bg);
             border: 1px solid #e0e0e0;
@@ -130,7 +187,6 @@
             margin-top: 1rem;
         }
 
-        /* Controls Section */
         .controls-wrapper {
             background: var(--secondary-bg);
             padding: 1.5rem;
@@ -243,7 +299,6 @@
             box-shadow: none;
         }
 
-        /* Grid Section */
         .grid-section {
             margin-top: 2rem;
             background: var(--secondary-bg);
@@ -312,21 +367,52 @@
             font-weight: 500;
         }
 
-        /* Footer */
         .footer {
             text-align: center;
             margin-top: 3rem;
             padding: 2rem 1rem;
             color: var(--subtle-text);
         }
+
+        @media (max-width: 768px) {
+            .nav-links {
+                display: none;
+                flex-direction: column;
+                align-items: flex-start;
+                background: var(--secondary-bg);
+                position: absolute;
+                top: 4.5rem;
+                right: 1rem;
+                width: 14rem;
+                padding: 1.5rem;
+                border-radius: 1rem;
+                box-shadow: 0 4px 20px var(--shadow-light);
+            }
+
+            .nav-links.active {
+                display: flex;
+            }
+
+            .menu-toggle {
+                display: block;
+            }
+        }
     </style>
 </head>
 
 <body>
     <nav class="navbar">
-        <div class="logo"><i class="fa-solid fa-chalkboard-user"></i><span>Teacher • Attendance Portal</span></div>
-        <ul class="nav-links">
-            <li><button id="logoutBtn"><i class="fas fa-sign-out-alt"></i> Logout</button></li>
+        <div class="logo"><i class="fa-solid fa-chalkboard-user"></i><span>Teacher Portal</span></div>
+        <div class="menu-toggle" id="mobile-menu"><i class="fas fa-bars"></i></div>
+        <ul class="nav-links" id="nav-links">
+            <li><a href="/index.html"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="/teachermarks/index.html"><i class="fas fa-clipboard"></i> Marks</a></li>
+            <li><a href="/teacher/index.html"><i class="fas fa-user-check"></i> Attendance</a></li>
+            <li>
+                <button id="logoutBtn">
+                    <i class="fas fa-sign-out-alt"></i> Logout
+                </button>
+            </li>
         </ul>
     </nav>
     <main class="container">
@@ -409,7 +495,10 @@
             attBody = document.getElementById('attBody'),
             saveBtn = document.getElementById('saveBtn'),
             saveStatus = document.getElementById('saveStatus'),
-            logoutBtn = document.getElementById('logoutBtn');
+            logoutBtn = document.getElementById('logoutBtn'),
+            mobileMenu = document.getElementById('mobile-menu'),
+            navLinks = document.getElementById('nav-links');
+
 
         let currentUser = null;
 
@@ -454,12 +543,10 @@
         document.addEventListener('DOMContentLoaded', async () => {
             const userData = localStorage.getItem('user');
             if (!userData) {
-                createCustomAlert('Access Denied. Please log in.');
                 return redirectToLogin();
             }
             const tempUser = JSON.parse(userData);
 
-            // Fetch full teacher profile from Supabase
             const { data, error } = await supabase
                 .from('teacherportal')
                 .select('id, teacher_name, subject_code, subject_name, password')
@@ -468,7 +555,6 @@
 
             if (error || !data) {
                 console.error('Error fetching teacher data:', error);
-                createCustomAlert('Teacher data not found. Please log in again.');
                 return redirectToLogin();
             }
 
@@ -484,6 +570,10 @@
             teacherHeader.style.display = 'block';
             attDate.value = new Date().toISOString().split('T')[0];
             validateInputs();
+
+            mobileMenu.addEventListener('click', () => {
+                navLinks.classList.toggle('active');
+            });
         });
 
         logoutBtn.addEventListener('click', redirectToLogin);
@@ -507,7 +597,10 @@
             saveStatus.textContent = 'Building grid...';
             try {
                 // Fetch student data from the 'users' table
-                const { data: usersData, error: usersError } = await supabase
+                const {
+                    data: usersData,
+                    error: usersError
+                } = await supabase
                     .from('users')
                     .select('username, studentname'); // Updated column name to `studentname`
 
@@ -530,10 +623,10 @@
 
                 attBody.innerHTML = students.map(student => {
                     return `<tr data-roll="${student.roll_no}" data-name="${student.student_name}">
-                                    <td class="roll">${student.roll_no}</td>
-                                    <td class="student-name">${student.student_name}</td>
-                                    <td><input type="number" class="status-input" min="0" max="${totalClasses}" value="${totalClasses}"/></td>
-                                </tr>`;
+                                      <td class="roll">${student.roll_no.toUpperCase()}</td>
+                                      <td class="student-name">${student.student_name}</td>
+                                      <td><input type="number" class="status-input" min="0" max="${totalClasses}" value="${totalClasses}"/></td>
+                                    </tr>`;
                 }).join('');
 
                 gridSection.style.display = 'block';
@@ -592,11 +685,13 @@
 
             try {
                 const recordsToUpsert = [];
+                let errorFound = false;
                 rows.forEach(row => {
+                    if (errorFound) return;
                     const status = parseInt(row.querySelector('.status-input').value, 10);
                     if (status > totalClasses) {
                         createCustomAlert(`Attendance for ${row.dataset.roll} cannot exceed total classes.`);
-                        throw new Error("Invalid attendance count.");
+                        errorFound = true;
                     }
                     recordsToUpsert.push({
                         username: row.dataset.roll.toLowerCase(),
@@ -611,7 +706,13 @@
                     });
                 });
 
-                const { error } = await supabase.from('attendance').upsert(recordsToUpsert, {
+                if (errorFound) {
+                    throw new Error("Invalid attendance count.");
+                }
+
+                const {
+                    error
+                } = await supabase.from('attendance').upsert(recordsToUpsert, {
                     onConflict: 'username, date, subject_code'
                 });
 
