--- a/stellar/teacher/index.html
+++ b/stellar/teacher/index.html
@@ -407,7 +407,7 @@
         <ul class="nav-links" id="nav-links">
             <li><a href="/index.html"><i class="fas fa-home"></i> Home</a></li>
             <li><a href="/teachermarks/index.html"><i class="fas fa-clipboard"></i> Marks</a></li>
-            <!-- <li><a href="/teacher/index.html"><i class="fas fa-user-check"></i> Attendance</a></li> -->
+            <li><a href="/teacher/index.html"><i class="fas fa-user-check"></i> Attendance</a></li>
             <li>
                 <button id="logoutBtn">
                     <i class="fas fa-sign-out-alt"></i> Logout
