--- a/stellar/teacher/index.html
+++ b/stellar/teacher/index.html
@@ -239,6 +239,7 @@
         .actions {
             display: flex;
             gap: 1rem;
+            flex-wrap: wrap; /* Added this line to fix the button layout */
         }
 
         .btn {
