--- a/stellar/attendence/index.html
+++ b/stellar/attendence/index.html
@@ -384,7 +384,7 @@
     <footer class="footer">
         <div class="footer-content">
             <p>© 2025 Stellar Mind | NIT Sikkim</p>
-            <p>📞 Contact: <a href="tel:+918769681167">Click to Call</a></p>
+            <p>📞 Contact: <a href="tel:+917908750746">7908750746</a></p>
             <div class="social-icons">
                 <a href="https://wa.me/7037796470" target="_blank"><i class="fab fa-whatsapp"></i></a>
                 <a href="https://instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
