--- a/stellar/events/index.html
+++ b/stellar/events/index.html
@@ -375,11 +375,11 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="logo-container">
-            <img src="https://placehold.co/100x100/4299E1/ffffff?text=SM" alt="Stellar Mind Logo">
+            <img src="/assets/ttlogo.jpg" alt="Stellar Mind Logo">
             <span>Stellar Mind</span>
         </div>
         <ul class="nav-links" id="nav-links">
-            <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="/index.html"><i class="fas fa-home"></i> Home</a></li>
             <li id="auth-btn"><a href="login/index.html"><i class="fas fa-user"></i> Login</a></li>
         </ul>
     </nav>
